# Smart-Local-Train-Companion

./: CONTRIBUTORS.md  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  crowd.py  health.py  journeys.py  stations.py
backend/app/core/: settings.py
backend/app/schemas/: stations.py  trains.py
backend/data/: stations.json
backend/sltm_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: package-lock.json
frontend/src/: App.jsx
frontend/src/pages/: home.css  home.jsx  trains.css  trains.jsx
