[project]
name = "sltm-backend"
version = "0.1.0"
description = "FastAPI backend for SLTM (Smart Local Train Companion - Mumbai-focused)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "SLTM Contributors" }]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# We have a flat layout with top-level `app/` and `data/`.
# Explicitly include only the `app` package so setuptools doesn't try to treat `data` as a package.
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uvicorn]
factory = true

# If you use `uv run uvicorn app.main:app`, uvicorn will ignore this section.
# Keep it as documentation / future customization.
